# garmin

./: .gitignore  CLAUDE.md  README.md  agent.py  agent_test.py  api.py  app.db  auth.py  database.py  macroplanner.py  macroplanner_test.py  model_utils.py  models.py  new.py  parse.py  plan.json  pyproject.toml  shared.py  tasks.py  timetravel.py  tmp.py  utils.py  verifier.py  verifier_test.py  weeks_builder.py
core/: new.py  parse.py
db_models/: __init__.py  user.py  user_data.py
fe/: package-lock.json  package.json
fe/src/: App.tsx  index.css  types.ts
fe/src/components/: AuthPage.tsx  CalendarView.tsx  Navbar.tsx  PendingView.tsx  SessionFeedbackModal.tsx  TrainingPlanView.tsx  UnplannedSessionModal.tsx  UserProfileForm.tsx  VerificationModal.tsx  VerificationStatus.tsx  WeeklyPlanView.tsx
fe/src/contexts/: AuthContext.tsx  UserStateContext.tsx
models/: __init__.py  enums.py  inputs.py  outputs.py  validators.py
nodes/: __init__.py  classifier.py  extractor.py  interviewer.py  planner.py  user_input.py  verifier.py
weeks/: 0.json  1.json  2.json  3.json  4.json  5.json
